# Detect_cargocart_rewrite

./: CMakeLists.txt
main/: CMakeLists.txt  app_main.c  my_protocol.c  my_protocol.h
